# pytags

./: .gitignore  .myenv  .pylintrc  LICENSE  Makefile  README.md  README.rst  README.txt  cfg.py  pyproject.toml  requirements.dev.txt  requirements.thawed.txt  requirements.txt  setup.cfg  setup.py  tagger.cfg.py  tagger.py
.github/workflows/: build.yml
config/: __init__.py  apt.py  cfg.py  composites.py  deb.py  general.py  git.py  project.py  python.py  version.py
doc/: TODO.txt  binary_files.txt  design.txt  table_structure.txt  why_should_you_use_tagger.txt
pytags/: cmdline.py  config.py  mgr.py  static.py  tagger.py  version.py
pytags/utils/: boot.py
scripts/: clean.sh
src/pytag/utils/: boot.py
src/pytagger/: cmdline.py
src/pytags/: cmdline.py  config.py  tagger.py
tagger/: cmdline.py  config.py  mgr.py
tagger/utils/: boot.py
tests/unit_tests/: test_basic.py
